# native/api/src/aria2.rs
@@ -813,6 +813,7 @@ mod tests {
             seed_post_ratio_limit_milli: -2,
             seed_time_limit_minutes: -2,
             seed_inactive_time_limit_minutes: -2,
+            seed_upload_limit_bps: 0,
         }
     }
 
